# circuito_RC

./: LICENSE.txt  README.md  pyproject.toml  teste.csv  teste1.csv
src/circuito_rc/: __about__.py  __init__.py  circuito.py  interface.py
