[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circuito-rc"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "kevinassimos", email = "kevin.assimos@acad.ufsm.br" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
[tool.hatch.dependencies]
pyqt5 = "^5.15.11"
matplotlib = "^3.7.1"

[project.urls]
Documentation = "https://github.com/kevinassimos/circuito-rc#readme"
Issues = "https://github.com/kevinassimos/circuito-rc/issues"
Source = "https://github.com/kevinassimos/circuito-rc"

[tool.hatch.version]
path = "src/circuito_rc/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/circuito_rc tests}"

[tool.coverage.run]
source_pkgs = ["circuito_rc", "tests"]
branch = true
parallel = true
omit = [
  "src/circuito_rc/__about__.py",
]

[tool.coverage.paths]
circuito_rc = ["src/circuito_rc", "*/circuito-rc/src/circuito_rc"]
tests = ["tests", "*/circuito-rc/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
